# Collector

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  reader.html  settings.html  vite.config.js
.github/workflows/: release.yml
public/icons/: placeholder.txt
src/: .gitignore  App.svelte  Reader.svelte  Settings.svelte  global.css  main.js  reader-main.js  settings-main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  placeholder.txt  tray-icon.png.base64
src-tauri/src/: capture.rs  edge_detect.rs  image_handler.rs  log_safety.rs  main.rs  selected_text.rs  settings.rs  shortcuts.rs  vault_index.rs
src/lib/: WikilinkPicker.svelte  reader-icons.js  stores.js  utils.js
src/lib/reader/: AppendToPicker.svelte  CommandPalette.svelte  ReaderEditor.svelte  ReaderTopBar.svelte  SearchBar.svelte  StatusToast.svelte  TabContextMenu.svelte  autocomplete.js  contentProcessing.js  editorSerialization.js  imageImport.js  lifecycleSetup.js  navigation.js  paletteLogic.js  reader-shell.css  saveLoadPipeline.js  searchLogic.js  settingsBridge.js  tabIO.js  tabState.js
src/lib/settings/: PanelActivation.svelte  PanelImages.svelte  PanelLook.svelte  PanelNoteWindow.svelte  PanelObsidian.svelte  PanelReaderWindow.svelte  PanelShortcuts.svelte
