[package]
name = "collector"
version = "1.0.0"
description = "Obsidian Quick Capture - Fast note capture for Obsidian"
authors = ["Julian Dean"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset", "macos-private-api",
    "tray-icon",
    "image-ico",
    "image-png"
] }
tauri-plugin-global-shortcut = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
image = "0.24"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
core-graphics = "0.23"
cocoa = "0.25"
objc = "0.2"
base64 = "0.22"
tauri-plugin-autostart = "2.1"
tauri-plugin-dialog = "2.4.2"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
